[FEAT] Add Logo. ThemeSwitcher. Logo components

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -3,7 +3,7 @@
   --color-background-invert: #fff;
   --color-item-background: #24262c;
 
-  --color-primary: #5584eb;
+  --color-primary: #3067dd;
   --color-light-primary: #86a8f1;
   
   --color-dark-secondary: green;
