[FEAT] Add NavigationMenu, Portal, Backdrop, Drawer components

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -19,6 +19,7 @@
   --color-text3: #a3a3a3;
   --color-text4: #727272;
   
+  --color-backdrop: rgba(140, 137, 143, 0.5);
   --color-shadow04: rgba(97, 92, 102, 0.4);
   --color-shadow03: rgba(97, 92, 102, 0.3);
   --color-shadow10: #161616;
