--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -19,6 +19,7 @@
   --color-text3: #a7a7a7;
   --color-text4: #d1d1d1;
   
+  --color-backdrop: rgba(77, 77, 77, 0.5);
   --color-shadow04: rgba(56, 53, 58, 0.4);
   --color-shadow03: rgba(56, 53, 58, 0.3);
   --color-shadow02: rgba(56, 53, 58, 0.1);
