--- a/src/shared/ui/button/Button.module.scss
+++ b/src/shared/ui/button/Button.module.scss
@@ -1,4 +1,4 @@
-.button {
+.button.default {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -23,13 +23,13 @@
   font-size: var(--font-size);
 }
 
-.button:hover {
+.button.default:hover {
   box-shadow: var(--color-shadow04) 0 3px 6px, var(--color-shadow03) 0 5px 13px -3px, var(--color-shadow10) 0 -3px 0 inset;
   transform: translateY(-2px);
   z-index: 20;
 }
 
-.button:active {
+.button.default:active {
   box-shadow: var(--color-shadow03) 0 2px 8px inset;
   transform: translateY(1px);
 }
@@ -54,4 +54,17 @@
 
 .button_sub_icon {
   font-size: calc(var(--font-size) * 0.9);
+}
+
+.button.clear {
+  transition: background-color var(--animation-duration);
+
+  &:hover {
+    background-color: var(--color-shadow03);
+  }
+
+  &:active {
+    border: 2px solid var(--color-primary);
+    background-color: var(--color-shadow03);
+  }
 }
