--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,5 +1,5 @@
-@import './reset.scss';
-@import './variables/sizes.scss';
-@import './themes/light.scss';
-@import './themes/dark.scss';
-@import './global.scss';
+@import './reset';
+@import './variables/sizes';
+@import './themes/light';
+@import './themes/dark';
+@import './global';
