--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -19,4 +19,6 @@
   --color-shadow04: rgb(97 92 102 / 40%);
   --color-shadow03: rgb(97 92 102 / 30%);
   --color-shadow10: #161616;
+  --color-loader1: #fff;
+  --color-loader2: rgba(255, 255, 255, 0.6);
 }
