--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -20,8 +20,8 @@
   --color-shadow03: rgb(56 53 58 / 30%);
   --color-shadow02: rgb(56 53 58 / 10%);
   --color-shadow10: #d8d8e2;
-  --color-loader1: rgb(49, 49, 49);
-  --color-loader2: rgba(35, 35, 35, 0.3);
+  --color-loader1: rgb(49 49 49);
+  --color-loader2: rgba(35 35 35 0.3);
 }
 
 :root {
@@ -46,6 +46,6 @@
     --color-shadow03: rgb(56 53 58 / 30%);
     --color-shadow02: rgb(56 53 58 / 10%);
     --color-shadow10: #d8d8e2;
-    --color-loader1: rgb(49, 49, 49);
-    --color-loader2: rgba(35, 35, 35, 0.3);
+    --color-loader1: rgb(49 49 49);
+    --color-loader2: rgba(35 35 35 0.3);
 }
