[FEAT] Upgrade button

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -2,7 +2,7 @@
   --color-background: #fff;
   --color-background-invert: rgb(35 35 35);
   --color-item-background: #fff;
-  --color-primary: #3067dd;
+  --color-primary: #4ca31a;
   --color-light-primary: #6189dd;
   --color-dark-secondary: green;
   --color-secondary: #4ca31a;
@@ -28,7 +28,7 @@
   --color-background: #fff;
     --color-background-invert: rgb(35 35 35);
     --color-item-background: #fff;
-    --color-primary: #3067dd;
+    --color-primary: #4ca31a;
     --color-light-primary: #6189dd;
     --color-dark-secondary: green;
     --color-secondary: #4ca31a;
