--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -39,5 +39,5 @@
   --color-loader1: rgb(49 49 49);
   --color-loader2: rgba(35 35 35 / 30%);
   --color-white: #fff;
-  --color-item-border: rgb(202, 202, 202);
+  --color-item-border: rgb(202 202 202);
 }
