[FEAT] Add validators, upgrade auth modal

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -8,13 +8,12 @@
   --color-text: #d3d3d3;
   --color-text2: #b9b8b8;
   --color-text3: #a3a3a3;
-  --color-text4: #727272;
+  --color-text4: #3a3a3a;
   --color-backdrop: rgba(83 79 85 / 50%);
   --color-shadow04: rgb(97 92 102 / 40%);
   --color-shadow03: rgb(97 92 102 / 30%);
   --color-shadow10: #161616;
   --color-loader1: #fff;
   --color-loader2: rgba(255 255 255 / 60%);
-  --color-white: #fff;
   --color-item-border: rgba(127 120 133);
 }
