--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,5 +1,5 @@
 @import './reset';
-@import './variables/sizes';
+@import './variables/globals';
 @import './themes/light';
 @import './themes/dark';
 @import './global';
