--- a/src/shared/ui/button/Button.module.scss
+++ b/src/shared/ui/button/Button.module.scss
@@ -102,11 +102,12 @@
 }
 
 .button.disable {
-  background-color: var(--color-shadow02);
+  background-color: var(--color-text4);
+  box-shadow: none;
 
   &:hover {
-      box-shadow: var(--color-shadow04) 0 1px 1px, var(--color-shadow03) 0 5px 13px -3px, var(--color-shadow10) 0 -3px 0 inset;
-      transform: translateY(0);
-      z-index: 20;
+    box-shadow: none;
+    transform: translateY(0);
+    z-index: 20;
   }
 }
