--- a/src/shared/ui/input/Input.module.scss
+++ b/src/shared/ui/input/Input.module.scss
@@ -23,17 +23,24 @@
 
   &:focus {
       outline: 1px solid var(--color-primary);
+      border: 1px solid var(--color-primary);
   }
 }
 
 .input_placeholder, .input_valid_error {
+  font-size: calc(var(--font-size) * 0.9);
   padding: 0 5px;
   position: absolute;
   background-color: var(--color-background);
 }
 
+.input_valid_error {
+  z-index: 100;
+  margin-top: 2px;
+  color: var(--color-red);
+}
+
 .input_placeholder {
-  font-size: calc(var(--font-size) * 0.9);
   border-radius: 10px;
   top: 11px;
   left: 12px;
@@ -42,4 +49,10 @@
 
 .input:hover .input_textfild {
   outline: 1px solid var(--color-primary);
+  border: 1px solid var(--color-primary);
+}
+
+.input.error .input_textfild {
+  outline: 1px solid var(--color-red);
+  border: 1px solid var(--color-red);
 }
