--- a/src/widgets/auth-modal/ui/AuthModal.module.scss
+++ b/src/widgets/auth-modal/ui/AuthModal.module.scss
@@ -1,15 +1,18 @@
 .auth_modal {
+  width: 340px;
+
   .h1 {
-    font-size: calc(var(--font-size) * 1.6);
-    padding-bottom: calc(var(--gap) * 4);
+    font-size: calc(var(--font-size) * 1.8);
+    padding-bottom: calc(var(--gap) * 6);
   }
   
   .margin_bottom {
-    margin-bottom: calc(var(--gap) * 3);
+    margin-bottom: calc(var(--gap) * 6);
   }
 
   .button {
     width: 100%;
-    margin-top: calc(var(--gap) * 4);
+    margin-top: calc(var(--gap) * 6);
+    margin-bottom: calc(var(--gap) * 2);
   }
 }
