--- a/src/widgets/auth-modal/ui/AuthModal.module.scss
+++ b/src/widgets/auth-modal/ui/AuthModal.module.scss
@@ -8,4 +8,13 @@
     align-items: center;
     justify-content: center;
   }
+
+  .link {
+    border-bottom: 1px solid var(--color-text2);
+    padding: 1px 2px;
+
+    &:hover {
+      border-color: var(--color-primary);
+    }
+  }
 }
