[FEAT] Add login

--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -18,6 +18,7 @@
   --color-loader2: rgba(35 35 35 / 30%);
   --color-white: #fff;
   --color-red: #da1515;
+  --color-red01: rgba(255 65 65 / 10%);
   --color-item-border: rgb(202 202 202);
   --sheets-header-height: 60px;
   --sheets-toolbar-height: 65px;
