--- a/src/features/auth-by-email/ui/login-form/LoginForm.module.scss
+++ b/src/features/auth-by-email/ui/login-form/LoginForm.module.scss
@@ -1,8 +1,7 @@
 .login_form {
   width: 100%;
 
-  .h1 {
-    font-size: calc(var(--font-size) * 1.8);
+  .title {
     padding-bottom: calc(var(--gap) * 6);
   }
   
@@ -14,5 +13,15 @@
     width: 100%;
     margin-top: calc(var(--gap) * 6);
     margin-bottom: calc(var(--gap) * 2);
+  }
+
+  .login_error {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: var(--radius);
+    width: 100%;
+    height: 40px;
+    background-color: var(--color-red01);
   }
 }
