--- a/src/shared/ui/button/Button.module.scss
+++ b/src/shared/ui/button/Button.module.scss
@@ -38,6 +38,12 @@
   color: var(--color-black2);
 }
 
+.button.icon.text {
+  .button_icon {
+    margin-right: var(--gap);
+  }
+}
+
 .button_icon_container {
   display: flex;
   align-items: center;
