[FEAT] Add memo for components

--- a/src/entities/logo/ui/Logo.module.scss
+++ b/src/entities/logo/ui/Logo.module.scss
@@ -1,8 +1,5 @@
-.logo {}
-
 .logo_name {
-  font-size: calc(var(--font-size) * 1.6);
-  color: var(--color-text);
+  margin-left: var(--gap);
 }
 
 .link {
