--- a/src/shared/ui/loader/Loader.module.scss
+++ b/src/shared/ui/loader/Loader.module.scss
@@ -8,6 +8,14 @@
   animation: layers1 0.5s linear infinite alternate;
 }
 
+.loader_container.center {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .loader::after {
   content: '';
   position: absolute;
