[FEAT] Add dropdown, menu, item, screenshots, stories

--- a/src/shared/ui/input/Input.module.scss
+++ b/src/shared/ui/input/Input.module.scss
@@ -12,7 +12,7 @@
   position: absolute;
   height: 40px;
   padding-left: 15px;
-  color: var(--color-text);
+  color: var(--color-text2);
 
   svg {
     font-size: calc(var(--font-size) * 1.2);
