--- a/src/shared/ui/button/Button.module.scss
+++ b/src/shared/ui/button/Button.module.scss
@@ -35,7 +35,7 @@
 
 .button_icon {
   font-size: calc(var(--font-size) * 1.3);
-  color: var(--color-black2);
+  color: var(--color-text2);
 }
 
 .button.icon.text {
