[FEAT] Add profile

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -2,4 +2,5 @@
 @import './variables/globals';
 @import './themes/light';
 @import './themes/dark';
+@import './mixins/global';
 @import './global';
