--- a/src/entities/profile/ui/profile-card/ProfileCard.module.scss
+++ b/src/entities/profile/ui/profile-card/ProfileCard.module.scss
@@ -1,1 +1,34 @@
-.card {}
+.profile_card {
+  max-height: 600px;
+  min-height: 350px;
+}
+
+.card_title {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  padding-top: calc(var(--gap) * 2);
+  padding-bottom: calc(var(--gap) * 4);
+}
+
+.row {
+  display: flex;
+  height: 40px;
+  margin-bottom: var(--gap);
+  align-items: center;
+}
+
+.title {
+  width: 90px;
+}
+
+.error, .loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.avatar_container {
+  padding-bottom: calc(var(--gap) * 2);
+}
