--- a/src/pages/profile-page/ui/ProfilePage.module.scss
+++ b/src/pages/profile-page/ui/ProfilePage.module.scss
@@ -1,3 +1,9 @@
 .profile_page {
-  
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.card {
+  margin-top: calc(var(--gap) * 4);
 }
