--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -43,4 +43,9 @@
   --color-scroll-track: #3f3c3c;
   --color-scroll-thumb: #202127;
   --color-scroll-thumb-border: #4d4d4d;
+
+  // Skeleton
+  --color-skeleton: rgba(255 255 255 / 20%);
+  --color-skeleton-background: rgba(0 0 0 / 10%);
+  --color-skeleton-shadow: rgba(255, 255, 255, 0.1);
 }
