--- a/src/app/styles/themes/toxic.scss
+++ b/src/app/styles/themes/toxic.scss
@@ -43,4 +43,9 @@
   --color-scroll-track: #197c43;
   --color-scroll-thumb: #22a759;
   --color-scroll-thumb-border: #35c772;
+
+  // Skeleton
+  --color-skeleton: rgba(95 104 112 / 10%);
+  --color-skeleton-background: rgba(0 0 0 / 10%);
+  --color-skeleton-shadow: rgba(0 0 0 / 30%);
 }
