--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -43,4 +43,9 @@
   --color-scroll-track: #eee;
   --color-scroll-thumb: #e7e7e7;
   --color-scroll-thumb-border: #d4d4d4;
+
+  // Skeleton
+  --color-skeleton: rgba(95 104 112 / 10%);
+  --color-skeleton-background: rgba(0 0 0 / 10%);
+  --color-skeleton-shadow: rgba(0 0 0 / 30%);
 }
