[FEAT] Add template details blocks

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -48,4 +48,7 @@
   --color-skeleton: rgba(95 104 112 / 10%);
   --color-skeleton-background: rgba(0 0 0 / 10%);
   --color-skeleton-shadow: rgba(0 0 0 / 30%);
+
+  // Code
+  --color-code-background: rgba(0, 0, 0, 0.1);
 }
