--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -49,6 +49,9 @@
   --color-skeleton-background: rgba(0 0 0 / 10%);
   --color-skeleton-shadow: rgba(0 0 0 / 30%);
 
+  // Code
+  --color-code-background: rgba(0, 0, 0, 0.1);
+
   // Globals
   --color-red: rgb(202 42 42);
   --color-red1:rgba(255 130 130 / 10%);
