--- a/src/entities/template/ui/template-image-block/TemplateImageBlock.module.scss
+++ b/src/entities/template/ui/template-image-block/TemplateImageBlock.module.scss
@@ -1,1 +1,8 @@
-.template_image_block {}
+.template_image_block {
+  max-width: var(--template-max-width);
+  width: 100%;
+}
+
+.image {
+  max-width: 100%;
+}
