--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -48,4 +48,7 @@
   --color-skeleton: rgba(255 255 255 / 20%);
   --color-skeleton-background: rgba(0 0 0 / 10%);
   --color-skeleton-shadow: rgba(255, 255, 255, 0.1);
+
+  // Code
+  --color-code-background: rgba(5, 5, 5, 0.1);
 }
