--- a/src/shared/ui/skeleton/ui/skeleton/Skeleton.module.scss
+++ b/src/shared/ui/skeleton/ui/skeleton/Skeleton.module.scss
@@ -1,6 +1,6 @@
 .skeleton {
   width: 100%;
-  height: 40px;
+  min-height: 10px;
   position: relative;
   overflow: hidden;
   background-color: var(--color-skeleton-background);
