[FEAT] Add tests for template components

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -50,5 +50,5 @@
   --color-skeleton-shadow: rgba(0 0 0 / 30%);
 
   // Code
-  --color-code-background: rgba(0, 0, 0, 0.1);
+  --color-code-background: rgba(0 0 0 / 110%);
 }
