--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -50,7 +50,7 @@
   --color-skeleton-shadow: rgba(0 0 0 / 30%);
 
   // Code
-  --color-code-background: rgba(0, 0, 0, 0.1);
+  --color-code-background: rgba(0 0 0 / 10%);
 
   // Globals
   --color-red: rgb(202 42 42);
