--- a/src/shared/ui/code/ui/code/Code.module.scss
+++ b/src/shared/ui/code/ui/code/Code.module.scss
@@ -5,6 +5,13 @@
   border-radius: var(--radius);
   border: 1px solid var(--color-border);
   background-color: var(--color-code-background);
+
+  pre {
+    code {
+      line-height: 22px;
+      font-size: calc(var(--font-size) * 1.1);
+    }
+  }
 }
 
 .copy_button_container {
