--- a/src/pages/template-details-page/ui/template-details-page/TemplateDetailsPage.module.scss
+++ b/src/pages/template-details-page/ui/template-details-page/TemplateDetailsPage.module.scss
@@ -1,3 +1,19 @@
 .template_details_page {
-  padding-bottom: calc((var(--gap) * 30));
+  padding-bottom: calc((var(--gap) * 10));
+}
+
+.comments {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: calc(var(--gap) * 2);
+}
+
+.comments_width {
+  max-width: var(--template-max-width);
+  width: 100%;
+}
+
+.comments_title {
+  margin-bottom: calc(var(--gap) * 4);
 }
