--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -13,7 +13,7 @@ body {
   border-top: 1px solid var(--color-border3);
   width: 100%;
   padding: 0 calc(var(--gap) * 4);
-  // height: calc(100vh - var(--sheets-header-height));
+  min-height: calc(100vh - var(--sheets-header-height));
   // overflow: auto;
 }
 
