[FEAT] Add layout for templates

--- a/src/pages/template-details-page/ui/template-details-page/TemplateDetailsPage.module.scss
+++ b/src/pages/template-details-page/ui/template-details-page/TemplateDetailsPage.module.scss
@@ -21,3 +21,8 @@
 .comments_title, .dd_comment_form_title {
   margin-bottom: calc(var(--gap) * 4);
 }
+
+.back {
+  padding-top: calc(var(--gap) * 4);
+  padding-bottom: calc(var(--gap) * 2);
+}
