--- a/src/pages/templates-page/ui/templates-page/TemplatesPage.module.scss
+++ b/src/pages/templates-page/ui/templates-page/TemplatesPage.module.scss
@@ -1,1 +1,10 @@
-.templates_page {}
+.templates_page {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.width {
+  width: 100%;
+  max-width: var(--template-max-width);
+}
