--- a/src/widgets/layout/ui/layout/Layout.module.scss
+++ b/src/widgets/layout/ui/layout/Layout.module.scss
@@ -1,3 +1,14 @@
+@import 'app/styles/mixins/global';
+
 .layout {
+  @include scroll(12px);
+
+  border-top: 1px solid var(--color-border3);
   background-color: var(--color-main);
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+  padding: 0 calc(var(--gap) * 4);
+  min-height: calc(100vh - var(--sheets-header-height));
+  max-height: calc(100vh - var(--sheets-header-height));
 }
