--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -49,6 +49,9 @@
   --color-skeleton-background: rgba(0 0 0 / 10%);
   --color-skeleton-shadow: rgba(0 0 0 / 30%);
 
+  // Card
+  --color-card: rgba(0 0 0 / 10%);
+
   // Code
   --color-code-background: rgba(0 0 0 / 10%);
 
