--- a/src/shared/ui/card/ui/card/Card.module.scss
+++ b/src/shared/ui/card/ui/card/Card.module.scss
@@ -1,6 +1,6 @@
 .card {
   padding: calc(var(--gap) * 3);
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: var(--color-card);
   min-width: 120px;
   border-radius: var(--radius);
 }
