--- a/src/pages/templates-page/ui/templates-page-filters/TemplatesPageFilters.module.scss
+++ b/src/pages/templates-page/ui/templates-page-filters/TemplatesPageFilters.module.scss
@@ -2,6 +2,8 @@
   padding: var(--gap) 0;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
   position: sticky;
   top: 0;
   z-index: 10;
@@ -14,7 +16,7 @@
   display: flex;
   align-items: center;
   max-width: var(--template-max-width);
-  border-bottom: 1px solid var(--color-border3);
+  // border-bottom: 1px solid var(--color-border3);
 }
 
 .title {
@@ -37,4 +39,9 @@
 .sort_input, .sortOrder_input {
   min-width: 200px;
   width: 200px;
+}
+
+.drag_line {
+  width: 100%;
+  max-width: var(--template-max-width);
 }
