--- a/src/pages/template-details-page/ui/template-details-page/TemplateDetailsPage.module.scss
+++ b/src/pages/template-details-page/ui/template-details-page/TemplateDetailsPage.module.scss
@@ -2,7 +2,7 @@
   padding-bottom: calc((var(--gap) * 10));
 }
 
-.comments, .add_comment_form {
+.comments, .add_comment_form, .recommends {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,7 +13,7 @@
   margin-bottom: calc(var(--gap) * 2);
 }
 
-.comments_width, .add_comment_form_width {
+.comments_width, .add_comment_form_width, .recommends_width {
   max-width: var(--template-max-width);
   width: 100%;
 }
