--- a/src/shared/ui/drag-line/ui/drag-line-item/DragLineItem.module.scss
+++ b/src/shared/ui/drag-line/ui/drag-line-item/DragLineItem.module.scss
@@ -3,6 +3,6 @@
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-  background-color: rgb(0, 0, 0, 0.2);
+  background-color: rgb(0 0 0 / 20%);
   border-radius: 5px;
 }
