[FIX] Fix loader scss variables

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -23,7 +23,7 @@
   --color-shadow-modal: #1f2124;
 
   // Loader
-  --color-loader0: #F4F6FB;
+  --color-loader: #F4F6FB;
   --color-loader1: rgba(255 255 255 / 60%);
 
   // Disable
