--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -23,7 +23,7 @@
   --color-shadow-modal: #1f2124;
   
   // Loader
-  --color-loader0: rgb(49 49 49);
+  --color-loader: rgb(49 49 49);
   --color-loader1: rgba(35 35 35 / 30%);
   
   // Disable
