--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -73,4 +73,6 @@
   --font-size: 1rem;
   --animation-duration: 0.1s;
   --template-max-width: 1200px;
+  --sheets-max-width: 1200px;
+  --default-max-width: 1200px;
 }
