--- a/src/pages/template-details-page/ui/template-details-page-header/TemplateDetailsPageHeader.module.scss
+++ b/src/pages/template-details-page/ui/template-details-page-header/TemplateDetailsPageHeader.module.scss
@@ -9,5 +9,5 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  max-width: var(--templates-max-width);
+  max-width: var(--template-max-width);
 }
