[REFACT] Add containers to components

--- a/src/entities/profile/ui/profile-card-edit/ProfileCardEdit.module.scss
+++ b/src/entities/profile/ui/profile-card-edit/ProfileCardEdit.module.scss
@@ -1,6 +1,5 @@
 .edit {
-  display: flex;
-  justify-content: space-between;
+  width: 100%;
   height: 40px;
   margin-top: calc(var(--gap) * 4);
 }
