--- a/src/pages/template-details-page/ui/template-details-page-header/TemplateDetailsPageHeader.module.scss
+++ b/src/pages/template-details-page/ui/template-details-page-header/TemplateDetailsPageHeader.module.scss
@@ -1,13 +1,6 @@
-.template_details_page_header {
-  display: flex;
-  justify-content: center;
-}
+.template_details_page_header {}
 
 .width {
   padding-top: calc(var(--gap) * 4);
   padding-bottom: calc(var(--gap) * 2);
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  max-width: var(--template-max-width);
 }
