--- a/src/entities/user/ui/user/User.module.scss
+++ b/src/entities/user/ui/user/User.module.scss
@@ -1,1 +1,19 @@
-.user {}
+.user {
+  position: relative;
+}
+
+.dropdown {
+  right: 0;
+}
+
+.avatar {
+  cursor: pointer;
+
+  &:hover {
+    outline: 2px solid var(--color-primary);
+  }
+
+  &:active {
+    transform: scale(1.05);
+  }
+}
