--- a/src/shared/ui/star-rating/ui/star-rating/StarRating.module.scss
+++ b/src/shared/ui/star-rating/ui/star-rating/StarRating.module.scss
@@ -1,3 +1,25 @@
 .star_rating {
+  position: relative;
   display: flex;
+  border-radius: var(--radius);
+  padding: var(--gap);
+}
+
+.select {
+  outline: 1px solid yellow;
+}
+
+.select_text_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+}
+
+.select_text {
+  padding: 0 var(--gap);
+  background-color: var(--color-main);
 }
