[FEAT] Ended creating template rating widget

--- a/src/entities/rating/ui/rating/Rating.module.scss
+++ b/src/entities/rating/ui/rating/Rating.module.scss
@@ -5,3 +5,12 @@
 .title {
   padding-bottom: calc(var(--gap) * 2);
 }
+
+.buttons_container {
+  padding-top: calc(var(--gap) * 3);
+  width: 100%;
+}
+
+.feedback_title {
+  padding-bottom: calc(var(--gap) * 4);
+}
