--- a/src/shared/ui/backdrop/ui/backdrop/Backdrop.module.scss
+++ b/src/shared/ui/backdrop/ui/backdrop/Backdrop.module.scss
@@ -5,6 +5,7 @@
   position: fixed;
   background-color: var(--color-backdrop);
   top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
   z-index: 201;
