[FIX] Fix notification list scroll

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -40,8 +40,9 @@
   --color-border5: #252a30;
 
   // Scroll
-  --color-scroll-track: #3f3c3c;
+  --color-scroll-track: #37383a;
   --color-scroll-thumb: #202127;
+  --color-scroll-thumb-hover: #252730;
   --color-scroll-thumb-border: #4d4d4d;
 
   // Skeleton
