--- a/src/app/styles/themes/toxic.scss
+++ b/src/app/styles/themes/toxic.scss
@@ -42,6 +42,7 @@
   // Scroll
   --color-scroll-track: #197c43;
   --color-scroll-thumb: #22a759;
+  --color-scroll-thumb-hover: #22a759;
   --color-scroll-thumb-border: #35c772;
 
   // Skeleton
