--- a/src/app/styles/mixins/global.scss
+++ b/src/app/styles/mixins/global.scss
@@ -11,5 +11,9 @@
     background-color: var(--color-scroll-thumb);
     border: 1px solid var(--color-scroll-thumb-border);
     border-radius: var(--radius);
+
+    &:hover {
+        background-color: var(--color-scroll-thumb-hover);
+    }
   }
 }
