--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -42,6 +42,7 @@
   // Scroll
   --color-scroll-track: #eee;
   --color-scroll-thumb: #e7e7e7;
+  --color-scroll-thumb-hover: #e7e7e7;
   --color-scroll-thumb-border: #d4d4d4;
 
   // Skeleton
