[FEAT] Add confirm

--- a/src/shared/ui/modals/ui/confirm/Confirm.module.scss
+++ b/src/shared/ui/modals/ui/confirm/Confirm.module.scss
@@ -1,1 +1,10 @@
 .confirm {}
+
+.buttons {
+  padding-top: calc(var(--gap) * 3);
+  width: 100%;
+}
+
+.title {
+  padding-bottom: calc(var(--gap) * 4);
+}
