[REFACT] Update my plugin, fix architecture

--- a/src/shared/ui/modals/ui/drawer/Drawer.module.scss
+++ b/src/shared/ui/modals/ui/drawer/Drawer.module.scss
@@ -1,6 +1,7 @@
 .drawer {
   position: absolute;
   background-color: var(--color-main);
+  // background-color: red;
 
   &.right, &.left {
     top: 0;
