--- a/src/shared/ui/avatar/ui/avatar/Avatar.module.scss
+++ b/src/shared/ui/avatar/ui/avatar/Avatar.module.scss
@@ -1,5 +1,7 @@
 .avatar {
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  min-width: 40px;
+  min-height: 40px;
+  height: 40px;
+  width: 40px;
 }
