[REFACT] Layout, modal controller, auth modal

--- a/src/widgets/navbar/ui/Navbar.module.scss
+++ b/src/widgets/navbar/ui/Navbar.module.scss
@@ -6,4 +6,5 @@
   height: var(--sheets-header-height);
   background-color: var(--color-main);
   padding: 0 calc(var(--gap) * 4);
+  border-bottom: 1px solid var(--color-border3);
 }
