--- a/src/entities/profile/ui/profile-card/ProfileCard.module.scss
+++ b/src/entities/profile/ui/profile-card/ProfileCard.module.scss
@@ -1,4 +1,5 @@
 .profile_card {
+  padding-top: calc(var(--gap) * 2);
   max-height: 600px;
   min-height: 350px;
 }
@@ -15,4 +16,9 @@
 
 .avatar_container {
   padding-bottom: calc(var(--gap) * 2);
+}
+
+.avatar {
+  height: 100px;
+  width: 100px;
 }
