--- a/src/entities/notification/ui/notification-list-item/NotificationListItem.module.scss
+++ b/src/entities/notification/ui/notification-list-item/NotificationListItem.module.scss
@@ -1,12 +1,22 @@
 .notification_list_item {
+  transition: all var(--animation-duration);
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: var(--color-card);
+  border: 1px solid var(--color-border4);
 
   &.pointer {
     cursor: pointer;
+
+    &:hover {
+      background-color: var(--color-item-hover1);
+    }
+
+    &:active {
+      background-color: var(--color-item-hover2);
+    }
   }
 }
 
