--- a/src/shared/ui/drag-line/ui/drag-line-item/DragLineItem.module.scss
+++ b/src/shared/ui/drag-line/ui/drag-line-item/DragLineItem.module.scss
@@ -1,8 +1,17 @@
 .drag_line_item {
+  transition: all var(--animation-duration);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-  background-color: rgb(0 0 0 / 20%);
+  background-color: var(--color-card);
   border-radius: 5px;
+
+  &:hover {
+    background-color: var(--color-item-hover1);
+  }
+
+  &:active {
+    background-color: var(--color-item-hover2);
+  }
 }
