--- a/src/shared/ui/popups/ui/dropdown/dropdown/Dropdown.module.scss
+++ b/src/shared/ui/popups/ui/dropdown/dropdown/Dropdown.module.scss
@@ -3,7 +3,7 @@
   border-radius: var(--radius);
   overflow: hidden;
   position: absolute;
-  background-color: var(--color-main);
+  background-color: var(--color-dropdown-background);
   z-index: 22;
   border-top: 1px solid var(--color-shadow02);
   box-shadow: 0 2px 5px 0 var(--color-shadow04);
