--- a/src/widgets/auth-modal/ui/AuthModal.module.scss
+++ b/src/widgets/auth-modal/ui/AuthModal.module.scss
@@ -14,4 +14,11 @@
       border-color: var(--color-primary);
     }
   }
+
+  .fallback {
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
