--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -19,8 +19,8 @@
   --color-shadow04: rgb(56 53 58 / 40%);
   --color-shadow03: rgb(56 53 58 / 30%);
   --color-shadow10: #d8d8e2;
-  --color-backdrop: rgba(0 0 0 / 20%);
-  --color-shadow-modal: #1f2124;
+  --color-backdrop: rgba(0 0 0 / 30%);
+  --color-shadow-modal: rgb(56 53 58 / 20%);
   
   // Loader
   --color-loader: #282c34;
